1.4
    - fix for 1.3 urlbuilder refactor bug [issue #49]
1.3
    - file based cache refactor [issue #47]
    - database cache - increase blob size
    - use temporary disposable cache dir in example app instead of production one ;)
    - urlbuilder refactor
    - do not cache too long keys, just reducing the size does not guarantee uniqueness
    - make it possible to choose cache type in example app
    - introduce some new utils and tests

1.2
    - Added Derby based database secondary cache
    - Removed okhttp and moved to java 17
    - new example app starter scripts
    - various small fixes and refactors

1.1

    - Example app migrated to xmlbeans instead of jaxb
    - Formalize map files format (use xsd schema), add validation of mapfiles against the schema
    - Logback version up, beacause of upstream vulnerabilities suggested by dependabot
    - Generate GPX Pojos in schema specified namespace location, no repackage
    - Some minor lint warning fixes
    - Move maven publishing to separate profile - fixes gpg request during normal dev build
    - Recenter/refit map on component/window resize

1.0

    - Initial release